feat(console): get post back list with filters
